@@ -151,7 +151,7 @@ span.doc_rec	{background-color:rgba(22,24,37,0.6);}
 .status_desc				{font-size:16px; padding-top:5px; width:500px; margin:0 auto;}
 
 /*	TABLES	*/
-td .currency	{font-size:12px; color:#ccc;}
+td .currency	{font-size:10px; line-height:12px; color:#ccc;}
 .value			{text-align:right;}
 .wrap_tab		{padding-bottom:5px; border-bottom:1px solid #666; margin-bottom:5px;}
 .wrap_tab:last-of-type	{border:0;}
