@@ -61,8 +61,40 @@
 {_it./policy-marker&&_it:/wrap-policy-marker||}
 {_it./contact-info&&_it:/wrap-contact-info||}
 {_it./related-activity&&_it:/wrap-related-activity||}
+{_it./other-identifier&&_it:/wrap-other-identifier||}	<!--	NEW	-->
+{_it./country-budget-items/budget-item&&_it:/wrap-country-budget-items}
+{_it./conditions&&_it:/wrap-conditions||}
+{_it./capital-spend&&_it:/wrap-capital-spend||}
+{_it./legacy-data&&_it:/wrap-legacy-data||}
+{_it./crs-add&&_it:/wrap-crss-add||}
+{_it./fss&&_it:/wrap-fss||}
 {_it./activity-status@code&&_it:/wrap-activity-status||}
 </div>
+
+	
+#^/wrap-country-budget-items	<!--	COUNTRY BUDGET ITEMS WRAPPER	-->
+	<div class="header_section collapsable">country budget items <span class="count">( {_it./country-budget-items/budget-item.length} )</span></div>
+	<div class="wrap_sector">
+		{_it./country-budget-items@vocabulary&&_it:/country-budget-items-vocab||}
+	</div>
+	
+<!--	COUNTRY BUDGET ITEMS VOCAB	-->
+#^/country-budget-items-vocab
+<div class="header" title="{_it./country-budget-items@vocabulary-description||}">{_it./country-budget-items@vocabulary-name||} <span class="count">( {_it./country-budget-items@vocabulary/budget-item.length} )</span></div>
+{_it./country-budget-items/budget-item:/budget-item||}
+
+<!--	COUNTRY BUDGET ITEMS TEMPLATE	-->
+#^/budget-item
+<div class="sector">
+	<div class="wrap_code">
+		<span class="sector_code_text">{_it.@code-name||}</span><span class="sector_code">{_it.@code||}</span>
+	</div><div class="wrap_bar">
+		<span class="sector_bar" style="width:calc({_it.@percentage} * 3.35px);"><span class="sector_overlay" style="width:calc({_it.@percentage} * 3.35px); background:rgba(0,153,255,calc({_it.@percentage}/100));"></span></span><span class="sector_value">{_it.@percentage||}</span>
+	</div>
+</div>
+
+
+
 
 #^/wrap-activity-status	<!--	ACTIVITY STATUS WRAPPER	-->
 	<div class="wrap_activity_status" style="background-color:{status.{_it./activity-status@code}};">
@@ -91,9 +123,9 @@
 {_it./department/narrative&&_it:/wrap-department||}
 {_it./person-name/narrative&&_it:/wrap-person-name||}
 {_it./job-title/narrative&&_it:/wrap-job-title||}
-{_it./telephone&&_it:/wrap-telephone||}
-{_it./email&&_it:/wrap-email||}
-{_it./website&&_it:/wrap-website||}
+{_it./telephone.0.text&&_it:/wrap-telephone||}
+{_it./email.0.text&&_it:/wrap-email||}
+{_it./website.0.text&&_it:/wrap-website||}
 {_it./mailing-address&&_it:/wrap-mailing-address||}
 
 #^/wrap-organisation	<!--	CONTACT INFO TEXT WRAPPERS	-->
