@@ -244,6 +244,7 @@
 			<li><a href="#tech17">{faq_technical_q17_text}</a></li>
 			<li><a href="#tech18">{faq_technical_q18_text}</a></li>
 			<li><a href="#tech19">{faq_technical_q19_text}</a></li>
+			<li><a href="#tech20">{faq_technical_q20_text}</a></li>
 		</ul>
 	</div>
 	
@@ -379,6 +380,13 @@
 			<span class="list">{faq_technical_q19_text}</span>
 			<span class="info">
 				{faq_technical_a19_text}
+			</span>
+		</li>
+		<li>
+			<span id="tech20"></span>
+			<span class="list">{faq_technical_q20_text}</span>
+			<span class="info">
+				{faq_technical_a20_text}
 			</span>
 		</li>
 	</ul>
