@@ -821,6 +821,12 @@ Why are there less nodules on some of the graphs for transactions on the activit
 The transactions are merged if they are published for the same date.
 <p>The last transaction will stretch across the lifetime of the activity.</p>
 
+#^faq_technical_q20_text
+Why are some data not showing up on the activity pages when they are available in the XML?
+
+#^faq_technical_a20_text
+We display machine-readable data where possible (ie. when we have codelists for those elements), narratives within these elements will not be displayed.
+
 #^faq_explore_q1_text
 What is EXPLORE?
 
