@@ -1,3 +1,9 @@
+Development Portal (2020-02-07 shi)
+==============================
+Update FAQ about narratives
+Add wrappers for remaining elements
+
+
 Development Portal (2020-02-06 shi)
 ==============================
 Update contact-info
